--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 :root {
-    font-family: Poppins, Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Poppins
+}
+
+.slick-list {
+    overflow: visible !important
+}
+
+.slick-dots li.slick-active button:before {
+    color: #F7628C !important;
 }
