initial magazine layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,9 +9,6 @@
     font-family: Poppins
 }
 
-.slick-list {
-    overflow: visible !important
-}
 
 .slick-dots li.slick-active button:before {
     color: #F7628C !important;
@@ -19,4 +16,7 @@
 
 .h-max {
     height: fit-content;
+}
+.w-95 {
+    width:95%
 }
