update dependencies | tailwindcss v 2.4 to v 3

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind variants;
 
 :root {
   font-family: Poppins;
@@ -20,3 +21,4 @@
 .w-95 {
   width: 95%;
 }
+
