sidebar + notification + routes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,20 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+.fade-enter {
+  opacity: 0;
+  transition: opacity 300ms;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
+
