--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,16 +96,25 @@
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
 }
 
 .swiper-button-next {
-  right: 0px !important;
-  padding: -10px !important;
+  right: -2px !important;
+ /*  padding: -10px !important; */
   color: rgb(249, 161, 205) !important;
   fill: rgb(249, 161, 205) !important;
   stroke: rgb(249, 161, 205) !important;
+  
+}
+
+.swiper-button-prev:after{
+font-size: 30px !important;
+}
+
+.swiper-button-next:after{
+  font-size: 30px !important;
 }
 
 .swiper-button-prev {
